--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing='20'>
     <tr>
-      <td>  <img src="images/zulbale.jpeg" alt=""></td>
+      <td>  <img src="zulbale.jpeg" alt=""></td>
       <td>  <h1>ZULFADLI ZAHID</h1>
       <p><strong><a href="https://en.wikipedia.org/wiki/Quality_assurance#:~:text=Quality%20assurance%20(QA)%20is%20a,quality%20requirements%20will%20be%20fulfilled%22.">Quality Assurance Assistant</a></strong></p>
       <p>Iam quality assurance for food factory</p></td>
